--- a/style.css
+++ b/style.css
@@ -307,3 +307,63 @@ footer{
     text-decoration: none;
     color: var(--color-purple);
 }
+
+@media screen and (max-width: 1020px) {
+    .flex {
+        flex-direction: column;
+    }
+
+    .logo {
+        font-size: 20px;
+    }
+
+    .navbar {
+        display: none;
+    }
+
+    .background__img img{
+        width: 100%;
+        height: 400vh;
+    }
+
+    .main {
+        background: linear-gradient(rgba(0, 0, 0, 0.548), #0d0f30);
+    }
+
+    .main__foreground {
+        padding-top: 30vh;
+        text-align: center;
+    }
+
+    .main__title {
+        font-size: 4rem;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    .main__text {
+        padding: 0.5rem;
+        margin-left: 4rem;
+        margin-right: 4rem;
+        margin-bottom: 1rem;
+        font-size: 14px;
+    }
+
+    .img__project {
+        width: 300px;
+    }
+
+    .btn {
+        margin-left: 3rem;
+        margin-right: 3em;
+        align-items: center;
+        text-align: center;
+    }
+
+    .navfooter {
+        display: none;
+    }
+
+}
