--- a/style.css
+++ b/style.css
@@ -112,6 +112,8 @@ button a {
     border-radius: 30px;
     margin: 0.25rem;
     justify-content: space-around;
+    cursor: pointer;
+    color: var(--color-graylight);
 }
 
 .btn button:hover {
@@ -183,7 +185,7 @@ section {
     transition: .5s;
 }
 
-.overlay a{
+.img__project a{
     text-decoration: none;
     color: var(--color-graylight);
 }
@@ -323,7 +325,7 @@ footer{
 
     .background__img img{
         width: 100%;
-        height: 400vh;
+        height: 350vh;
     }
 
     .main {
@@ -348,11 +350,43 @@ footer{
         margin-left: 4rem;
         margin-right: 4rem;
         margin-bottom: 1rem;
-        font-size: 14px;
+        font-size: 16px;
     }
 
     .img__project {
         width: 300px;
+    }
+
+    #project h3{
+        padding-top: 5rem;
+        margin-bottom: 4rem;
+        text-align: center;
+    }
+
+    .text__project {
+        display: none;
+    }
+
+    #about .flex{
+        gap: 2px;
+    }
+
+    #contact .flex{
+        flex-direction: column-reverse;
+        gap: 40px;
+    }
+
+    .text__contact h3{
+        margin-right: 2rem;
+    }
+
+    .text__contact p{
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+
+    .contact__img {
+        margin-bottom: 1rem;
     }
 
     .btn {
